schedule notify CSS prepare

--- a/stylesheets/cms-component.css
+++ b/stylesheets/cms-component.css
@@ -1,4 +1,4 @@
-/* line 15, ../sass/cms-component.sass */
+/* line 17, ../sass/cms-component.sass */
 .form-group input[type="text"], .form-group textarea {
   border-radius: 2px;
   box-shadow: 0 1px 0 rgba(252, 252, 252, 0.85), inset 0 1px 1px rgba(0, 0, 0, 0.3), inset 0 -1px 1px rgba(0, 0, 0, 0.24), inset 0 1px 3px rgba(0, 0, 0, 0.3);
@@ -6,7 +6,7 @@
   border: none;
   padding: 4px 8px;
 }
-/* line 21, ../sass/cms-component.sass */
+/* line 23, ../sass/cms-component.sass */
 .form-group input.disable[type="text"], .form-group textarea.disable {
   background-image: -webkit-gradient(linear, to top, to bottom, color-stop(0%, #e6e6e6), color-stop(51%, #e9e9e9), color-stop(81%, #ebebeb), color-stop(100%, #e2e2e2));
   background-image: -webkit-linear-gradient(to top, #e6e6e6, #e9e9e9 51%, #ebebeb 81%, #e2e2e2);
@@ -17,7 +17,7 @@
   cursor: default;
 }
 
-/* line 25, ../sass/cms-component.sass */
+/* line 27, ../sass/cms-component.sass */
 .tooltip-wrap .input-gray {
   padding: 4px 8px;
   -webkit-border-radius: 2px;
@@ -37,7 +37,7 @@
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.1));
 }
 
-/* line 33, ../sass/cms-component.sass */
+/* line 35, ../sass/cms-component.sass */
 .normal-btn {
   font-size: 15px;
   color: #555555;
@@ -55,7 +55,7 @@
   text-decoration: none;
   padding: 4px 10px;
 }
-/* line 43, ../sass/cms-component.sass */
+/* line 45, ../sass/cms-component.sass */
 .normal-btn:hover, .normal-btn.on {
   color: #999999;
   background-color: #d2d2d2;
@@ -68,7 +68,7 @@
   background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.1));
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.1));
 }
-/* line 48, ../sass/cms-component.sass */
+/* line 50, ../sass/cms-component.sass */
 .normal-btn.disable {
   background-color: rgba(210, 210, 210, 0.8);
   -webkit-box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.25);
@@ -80,81 +80,80 @@
   background-image: none;
 }
 
-/* line 57, ../sass/cms-component.sass */
+/* line 59, ../sass/cms-component.sass */
 .normal-margin {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-/* line 62, ../sass/cms-component.sass */
+/* line 64, ../sass/cms-component.sass */
 .normal-list > li {
   display: block;
   border-bottom: solid 1px rgba(255, 255, 255, 0.7);
   -webkit-box-shadow: inset 0 -1px 0 #bbbbbb;
   -moz-box-shadow: inset 0 -1px 0 #bbbbbb;
   box-shadow: inset 0 -1px 0 #bbbbbb;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
+  padding: 0.5em 1em;
 }
 
-/* line 73, ../sass/cms-component.sass */
+/* line 75, ../sass/cms-component.sass */
 fieldset {
   border: 0;
   margin: 0;
   padding: 0;
 }
 
-/* line 77, ../sass/cms-component.sass */
+/* line 79, ../sass/cms-component.sass */
 textarea {
   resize: none;
 }
 
-/* line 79, ../sass/cms-component.sass */
+/* line 81, ../sass/cms-component.sass */
 input, textarea {
   font-family: sans-serif;
 }
-/* line 81, ../sass/cms-component.sass */
+/* line 83, ../sass/cms-component.sass */
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #999999;
 }
-/* line 83, ../sass/cms-component.sass */
+/* line 85, ../sass/cms-component.sass */
 input:-moz-placeholder, textarea:-moz-placeholder {
   color: #999999;
 }
-/* line 85, ../sass/cms-component.sass */
+/* line 87, ../sass/cms-component.sass */
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #999999;
 }
-/* line 87, ../sass/cms-component.sass */
+/* line 89, ../sass/cms-component.sass */
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color: #999999;
 }
 
-/* line 94, ../sass/cms-component.sass */
+/* line 96, ../sass/cms-component.sass */
 .form-title {
   display: none;
 }
 
-/* line 97, ../sass/cms-component.sass */
+/* line 99, ../sass/cms-component.sass */
 .form-group {
   margin-bottom: 1.5rem;
   padding-left: 1.5rem;
 }
-/* line 102, ../sass/cms-component.sass */
+/* line 104, ../sass/cms-component.sass */
 .form-group.required-field {
   color: #555555;
   line-height: normal;
   position: relative;
   left: auto;
 }
-/* line 107, ../sass/cms-component.sass */
+/* line 109, ../sass/cms-component.sass */
 .form-group.required-field::before {
   content: "*";
   color: #ed1a1b;
   position: absolute;
   left: 0.65rem;
 }
-/* line 112, ../sass/cms-component.sass */
+/* line 114, ../sass/cms-component.sass */
 .form-group .form-label {
   float: left;
   width: 10rem;
@@ -162,12 +161,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   font-weight: bolder;
   font-size: 0.85rem;
 }
-/* line 118, ../sass/cms-component.sass */
+/* line 120, ../sass/cms-component.sass */
 .form-group .form-elements {
   margin-left: 11rem;
   display: block;
 }
-/* line 121, ../sass/cms-component.sass */
+/* line 123, ../sass/cms-component.sass */
 .form-group .notice {
   position: absolute;
   font-size: 0.8rem;
@@ -175,25 +174,25 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   top: 0;
   right: 0;
 }
-/* line 127, ../sass/cms-component.sass */
+/* line 129, ../sass/cms-component.sass */
 .form-group textarea {
   min-height: 5rem;
 }
-/* line 134, ../sass/cms-component.sass */
+/* line 136, ../sass/cms-component.sass */
 .form-group input[type="radio"] {
   display: none;
 }
-/* line 137, ../sass/cms-component.sass */
+/* line 139, ../sass/cms-component.sass */
 .form-group input[type="radio"] + label {
   margin-right: 1.5rem;
 }
-/* line 140, ../sass/cms-component.sass */
+/* line 142, ../sass/cms-component.sass */
 .form-group .radio-btn {
   display: inline-block;
   margin-bottom: 0.5rem;
   cursor: pointer;
 }
-/* line 145, ../sass/cms-component.sass */
+/* line 147, ../sass/cms-component.sass */
 .form-group .radio-btn:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -208,44 +207,44 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-radius: 100%;
   content: "";
 }
-/* line 157, ../sass/cms-component.sass */
+/* line 159, ../sass/cms-component.sass */
 .form-group .radio-btn:before input[type="radio"]:checked + .radio-btn {
   color: white;
   font-weight: bold;
 }
-/* line 161, ../sass/cms-component.sass */
+/* line 163, ../sass/cms-component.sass */
 .form-group input[type="radio"]:checked + .radio-btn:before {
   background-color: #333333;
 }
-/* line 163, ../sass/cms-component.sass */
+/* line 165, ../sass/cms-component.sass */
 .form-group input[type="radio"].on + .radio-btn:before {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.6), 0 0 1rem rgba(255, 255, 255, 0.7), 0 0 0.5rem rgba(255, 255, 255, 0.9);
   border-color: white;
 }
-/* line 166, ../sass/cms-component.sass */
+/* line 168, ../sass/cms-component.sass */
 .form-group .radio-btn.disable {
   color: #999999;
   cursor: default;
 }
-/* line 169, ../sass/cms-component.sass */
+/* line 171, ../sass/cms-component.sass */
 .form-group .radio-btn.disable:before {
   background-color: #e9e9e9 !important;
   border: 0.19rem solid #e9e9e9;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 174, ../sass/cms-component.sass */
+/* line 176, ../sass/cms-component.sass */
 .form-submit-wrap {
   text-align: right;
 }
-/* line 176, ../sass/cms-component.sass */
+/* line 178, ../sass/cms-component.sass */
 .form-submit-wrap .normal-btn {
   margin-left: 1rem;
   min-width: 4rem;
   text-align: center;
 }
 
-/* line 183, ../sass/cms-component.sass */
+/* line 185, ../sass/cms-component.sass */
 .tooltip-wrap {
   display: none;
   font-size: 13px;
@@ -266,7 +265,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   background-image: linear-gradient(to top, #dddddd, #fcfcfc);
   padding: 10px;
 }
-/* line 192, ../sass/cms-component.sass */
+/* line 194, ../sass/cms-component.sass */
 .tooltip-wrap:after {
   content: "";
   display: block;
@@ -279,30 +278,30 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-right: 8px solid #ededed;
   border-bottom: 8px solid transparent;
 }
-/* line 209, ../sass/cms-component.sass */
+/* line 211, ../sass/cms-component.sass */
 .tooltip-wrap .tooltip-content-list {
   background-image: none;
 }
-/* line 211, ../sass/cms-component.sass */
+/* line 213, ../sass/cms-component.sass */
 .tooltip-wrap .tooltip-content-list li {
   margin-bottom: 0.5rem;
   white-space: nowrap;
 }
-/* line 214, ../sass/cms-component.sass */
+/* line 216, ../sass/cms-component.sass */
 .tooltip-wrap .tooltip-content-list li:last-child {
   margin-bottom: 0;
 }
-/* line 216, ../sass/cms-component.sass */
+/* line 218, ../sass/cms-component.sass */
 .tooltip-wrap .input-gray {
   height: auto;
 }
-/* line 219, ../sass/cms-component.sass */
+/* line 221, ../sass/cms-component.sass */
 .tooltip-wrap.show-top {
   bottom: calc(100% + 10px);
   right: 0;
   left: auto;
 }
-/* line 223, ../sass/cms-component.sass */
+/* line 225, ../sass/cms-component.sass */
 .tooltip-wrap.show-top:after {
   bottom: -16px;
   left: auto;
@@ -310,4 +309,102 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   border-top: 8px solid #e3e3e3;
   border-right: 8px solid transparent;
   border-left: 8px solid transparent;
+}
+
+/* line 234, ../sass/cms-component.sass */
+.icon-question {
+  background: transparent url("../images/icon_question.png") no-repeat 0 0;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+/* line 239, ../sass/cms-component.sass */
+.icon-question.is-with-tooltip {
+  position: relative;
+}
+/* line 241, ../sass/cms-component.sass */
+.icon-question.is-with-tooltip .tooltip-wrap {
+  white-space: nowrap;
+  left: 28px;
+  top: -16px;
+}
+/* line 246, ../sass/cms-component.sass */
+.icon-question.is-with-tooltip:hover > .tooltip-wrap {
+  display: block;
+}
+
+/* line 248, ../sass/cms-component.sass */
+.nav-tabs {
+  overflow: hidden;
+  *zoom: 1;
+  position: relative;
+  padding-bottom: 20px;
+}
+/* line 254, ../sass/cms-component.sass */
+.nav-tabs:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #e2e2e2;
+  border: 1px solid #999999;
+  height: 10px;
+  width: 100%;
+  bottom: 10px;
+  box-sizing: border-box;
+  z-index: -1;
+  -webkit-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+}
+/* line 268, ../sass/cms-component.sass */
+.nav-tabs .tab-item {
+  float: left;
+  margin-bottom: -1px;
+}
+/* line 271, ../sass/cms-component.sass */
+.nav-tabs .tab-item a {
+  text-decoration: none;
+  color: #555555;
+  line-height: 1.2;
+  border: 1px solid #999999;
+  border-radius: 4px 4px 0 0;
+  position: relative;
+  display: block;
+  padding: 8px 25px;
+  background-color: white;
+}
+/* line 282, ../sass/cms-component.sass */
+.nav-tabs .tab-item a:hover {
+  color: #999999;
+}
+/* line 285, ../sass/cms-component.sass */
+.nav-tabs .tab-item.on a {
+  background-color: #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  cursor: default;
+}
+/* line 289, ../sass/cms-component.sass */
+.nav-tabs .tab-item.on a:hover {
+  color: #555555;
+}
+
+/* line 293, ../sass/cms-component.sass */
+.func-btns .del {
+  display: block;
+  width: 22px;
+  height: 24px;
+  margin: 2px 0 0;
+  background: url(../images/btn_func.png) no-repeat;
+  text-decoration: none;
+  text-indent: -100000px;
+  background-position: 0 -97px;
+}
+/* line 302, ../sass/cms-component.sass */
+.func-btns .del:hover {
+  background-position: -23px -97px;
+}
+
+/* line 305, ../sass/cms-component.sass */
+.btn-item {
+  display: inline-block;
 }
