--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -914,7 +914,7 @@ abbr, acronym {
     width: 100%;
     top: 75px;
     bottom: 0;
-    /*overflow: hidden;*/
+    overflow: hidden;
     /*padding-bottom: 48px;*/
 }
 
