--- a/stylesheets/cms-notification.css
+++ b/stylesheets/cms-notification.css
@@ -10,14 +10,14 @@
   display: block;
   overflow: hidden;
 }
-/* line 12, ../sass/cms-notification.sass */
+/* line 13, ../sass/cms-notification.sass */
 .notify-list .func-btns {
   float: right;
   margin-top: -22px;
   position: relative;
   z-index: 20;
 }
-/* line 17, ../sass/cms-notification.sass */
+/* line 18, ../sass/cms-notification.sass */
 .notify-list .notice {
   color: red;
   float: right;
@@ -25,16 +25,29 @@
   margin-right: 8px;
 }
 /* line 23, ../sass/cms-notification.sass */
-.notify-list > li.disable {
-  color: #999999;
+.notify-list > li {
+  cursor: pointer;
 }
 /* line 25, ../sass/cms-notification.sass */
+.notify-list > li:hover {
+  font-weight: bold;
+}
+/* line 28, ../sass/cms-notification.sass */
+.notify-list > li.disable {
+  cursor: default;
+  color: #999999;
+}
+/* line 31, ../sass/cms-notification.sass */
+.notify-list > li.disable:hover {
+  font-weight: normal;
+}
+/* line 34, ../sass/cms-notification.sass */
 .notify-list > li.disable .del {
   background-position: -46px -97px;
   cursor: default;
 }
 
-/* line 29, ../sass/cms-notification.sass */
+/* line 38, ../sass/cms-notification.sass */
 .notify-content {
   white-space: nowrap;
   overflow: hidden;
@@ -45,25 +58,25 @@
   display: inline-block;
 }
 
-/* line 37, ../sass/cms-notification.sass */
+/* line 46, ../sass/cms-notification.sass */
 .form-group input[type="text"], .form-group textarea {
   width: calc(100% - 18em);
   font-size: 0.85rem;
 }
 
-/* line 41, ../sass/cms-notification.sass */
+/* line 50, ../sass/cms-notification.sass */
 .normal-btn + .icon-question {
   line-height: 25px;
   vertical-align: middle;
   margin-left: 5px;
 }
 
-/* line 49, ../sass/cms-notification.sass */
+/* line 58, ../sass/cms-notification.sass */
 .notify-intro-image {
   display: none;
 }
 
-/* line 51, ../sass/cms-notification.sass */
+/* line 60, ../sass/cms-notification.sass */
 .notify-list-wrap {
   display: none;
 }
