--- a/stylesheets/old-portal-manage-add.css
+++ b/stylesheets/old-portal-manage-add.css
@@ -64,6 +64,12 @@
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
 }
+.banner-wrap .swfupload{
+  opacity: 0;
+}
+.banner-wrap:hover .swfupload{
+  opacity: 1;
+}
 
 /* line 57, ../sass/old-portal-manage-add.sass */
 .thumb-inner-warning {
@@ -88,7 +94,7 @@
   background-position: 50%;
   background-repeat: no-repeat;
   position: relative;
-  z-index: 10;
+  /*z-index: 10;*/
 
 }
 .centre-image img{
