--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -1158,7 +1158,21 @@ div.constrain {
     left: calc(100% + 10px);
 }
 
-
+/* Create new program */
+.btn-large.btn-create {
+    margin: 20px 15px;
+}
+.btn-large.btn-create .center {
+    font-size: 15px;
+    line-height: 20px;
+    color: #555;
+    width: 160px;
+}
+.btn-large.btn-create img {
+    position: absolute;
+    bottom: 25px;
+    margin-left: -24px;
+}
 /* 1358 */
 @media only screen and (min-width: 1358px) {
 #channel-name {
