--- a/stylesheets/cms-component.css
+++ b/stylesheets/cms-component.css
@@ -548,22 +548,82 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   text-align: center;
   border-radius: 4px;
 }
-/* line 420, ../sass/cms-component.sass */
+/* line 421, ../sass/cms-component.sass */
 .upload-video-btn:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
-/* line 422, ../sass/cms-component.sass */
+/* line 423, ../sass/cms-component.sass */
 .upload-video-btn .title {
   position: relative;
+  line-height: 40px;
+  vertical-align: middle;
 }
-/* line 424, ../sass/cms-component.sass */
-.upload-video-btn .title:before {
-  content: " ";
-  background: url(../images/icon-upload.png) no-repeat 50% 50%;
-  background-size: 70%;
-  width: 48px;
-  height: 42px;
-  display: block;
+/* line 427, ../sass/cms-component.sass */
+.upload-video-btn .title img {
+  vertical-align: middle;
+  transform: scale(0.7);
+}
+
+/* line 444, ../sass/cms-component.sass */
+.edit-episode-infomation .overlay-h316-center {
+  padding: 24px 10px 0px;
+}
+/* line 447, ../sass/cms-component.sass */
+.edit-episode-infomation .thumb-wrap {
+  width: 25%;
+  float: left;
+  position: relative;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+/* line 454, ../sass/cms-component.sass */
+.edit-episode-infomation .thumb-wrap:hover .thumb-hover-wrap {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+}
+/* line 458, ../sass/cms-component.sass */
+.edit-episode-infomation .img-wrap {
+  background-color: white;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+/* line 463, ../sass/cms-component.sass */
+.edit-episode-infomation .img-wrap img {
+  width: 100%;
+}
+/* line 465, ../sass/cms-component.sass */
+.edit-episode-infomation .form-group {
+  margin-bottom: 1em;
+  padding-left: 0.5em;
+}
+/* line 468, ../sass/cms-component.sass */
+.edit-episode-infomation .form-wrap {
+  width: 70%;
+  float: left;
+}
+/* line 471, ../sass/cms-component.sass */
+.edit-episode-infomation .form-elements {
+  margin-left: 1em;
+  width: 100%;
+}
+/* line 474, ../sass/cms-component.sass */
+.edit-episode-infomation .form-elements textarea, .edit-episode-infomation .form-elements input[type="text"] {
+  width: 100%;
+}
+/* line 476, ../sass/cms-component.sass */
+.edit-episode-infomation .form-label {
+  padding-left: 1.2em;
+  text-align: left;
+}
+/* line 479, ../sass/cms-component.sass */
+.edit-episode-infomation .thumb-hover-wrap {
+  font-size: 0.75rem;
   position: absolute;
-  left: -50px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  color: transparent;
+  background: transparent url("../images/baenner-upload.gif") no-repeat 8px 6px;
+  transition: all 0.5s ease;
 }
